Rust plugins: target/ build artefacts confuse the plugin scanner
Extract from gst-inspect-1.0:
(gst-plugin-scanner:80893): GStreamer-WARNING **: 14:45:39.601: Failed to load plugin '/Users/phil/dev/gst-build/build/subprojects/gst-plugins-rs/target/debug/deps/libgstrsfile.dylib.dSYM/Contents/Resources/DWARF/libgstrsfile.dylib': dlopen(/Users/phil/dev/gst-build/build/subprojects/gst-plugins-rs/target/debug/deps/libgstrsfile.dylib.dSYM/Contents/Resources/DWARF/libgstrsfile.dylib, 2): no suitable image found. Did find:
/Users/phil/dev/gst-build/build/subprojects/gst-plugins-rs/target/debug/deps/libgstrsfile.dylib.dSYM/Contents/Resources/DWARF/libgstrsfile.dylib: mach-o, but wrong filetype
/Users/phil/dev/gst-build/build/subprojects/gst-plugins-rs/target/debug/deps/libgstrsfile.dylib.dSYM/Contents/Resources/DWARF/libgstrsfile.dylib: mach-o, but wrong filetype
That's because /Users/phil/dev/gst-build/build/subprojects/gst-plugins-rs
is in the plugin path and that contains the huge target build directory. So the plugin scanner goes down that hole for nothing.
An approach to fix this might be to copy the built plugins in another directory and add that to the plugin path of the gst-env shell.
Edited by Philippe Normand